Refactored the merged code